--- a/amplify.yml
+++ b/amplify.yml
@@ -1,3 +1,6 @@
+# Configuración de Amplify para monorepo
+# El frontend está en la carpeta /frontend del repositorio
+# Con appRoot: frontend, Amplify automáticamente cambia al directorio /frontend antes de ejecutar comandos
 version: 1
 applications:
   - appRoot: frontend
@@ -16,4 +19,10 @@ applications:
       cache:
         paths:
           - node_modules/**/*
+    # Rewrites para SPA - redirigir todas las rutas a index.html excepto archivos estáticos
+    # Amplify automáticamente excluye archivos estáticos (JS, CSS, imágenes) de estas reglas
+    rewrites:
+      - source: '/<*>'
+        target: '/index.html'
+        status: '200'
 
